fix spacing of post titles

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -73,6 +73,7 @@ p, blockquote, pre,
 ul, ol, dl, figure,
 %vertical-rhythm {
     // margin-bottom: $spacing-unit / 2;
+    margin-top: $spacing-unit / 2;
 }
 
 
